# ML-HEP

./: 01.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: 01-checkpoint.ipynb
mlhep/: __init__.py  algorithms.py  gaussian.py
notebooks/: 01.ipynb  02.ipynb  algorithms.ipynb  selim.ipynb
