[tool.poetry]
name = "mlhep"
version = "0.1.0"
description = "Machine Learning in High Energy Physics"
authors = ["Mario Alberto Amador Chimal <mariochimal00aa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.1.2"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.13.0"
yabox = "^1.1.0"

[tool.poetry.group.dev.dependencies]
pydantic = "^2.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
